; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_scsi_transport_sas.c_sas_enable_tlr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_scsi_transport_sas.c_sas_enable_tlr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsi_device = type { i32 }
%struct.sas_end_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sas_enable_tlr(%struct.scsi_device* %0) #0 {
  %2 = alloca %struct.scsi_device*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.sas_end_device*, align 8
  store %struct.scsi_device* %0, %struct.scsi_device** %2, align 8
  store i32 0, i32* %3, align 4
  %5 = load %struct.scsi_device*, %struct.scsi_device** %2, align 8
  %6 = call i32 @sas_tlr_supported(%struct.scsi_device* %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load %struct.scsi_device*, %struct.scsi_device** %2, align 8
  %11 = call %struct.sas_end_device* @sas_sdev_to_rdev(%struct.scsi_device* %10)
  store %struct.sas_end_device* %11, %struct.sas_end_device** %4, align 8
  %12 = load %struct.sas_end_device*, %struct.sas_end_device** %4, align 8
  %13 = getelementptr inbounds %struct.sas_end_device, %struct.sas_end_device* %12, i32 0, i32 0
  store i32 1, i32* %13, align 4
  br label %14

14:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @sas_tlr_supported(%struct.scsi_device*) #1

declare dso_local %struct.sas_end_device* @sas_sdev_to_rdev(%struct.scsi_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
